--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
       @include('partials/hero.html')
       @include('partials/deal.html')
       @include('partials/services.html')
+      @include('partials/instruction.html')
+      @include('partials/check.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
