finished desktop version

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       @include('partials/services.html')
       @include('partials/instruction.html')
       @include('partials/check.html')
+      @include('partials/video.html')
+      @include('partials/contacts.html')
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
